Moved <nav> into <header> and activated nav links.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <header class="full">
             <div id="name">Charlotte Goodwin
             </div>
-        </header>
         <nav>
-            <a>About</a>
-            <a>Portfolio</a>
-            <a>Contact</a>
+            <a class="link" href="index.html">About</a>
+            <a class="link" href="portfolio.html">Portfolio</a>
+            <a class="link" href="contact.html">Contact</a>
         </nav>
+    </header>
+        
         <article>
             <h1>About Me</h1>
             <img src="assets/images/profile.jpg" alt="Charlotte Goodwin">
