index.html finished

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     </head>
 
     <body background="assets/images/grilled_@2X.png">
-        <header class="full">
-            <div id="name">Charlotte Goodwin
-            </div>
-        <nav>
-            <a class="link" href="index.html">About</a>
-            <a class="link" href="portfolio.html">Portfolio</a>
-            <a class="link" href="contact.html">Contact</a>
-        </nav>
-    </header>
-        
-        <article>
-            <h1>About Me</h1>
-            <img src="assets/images/profile.jpg" alt="Charlotte Goodwin">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quos eius veniam voluptates itaque nulla eligendi beatae. Ab quis porro ad? Exercitationem adipisci odio mollitia provident magnam velit debitis eius.</p>
-        </article>
-       <footer>Copyright ©</footer>
+        <div class="content">
+            <header>
+                <div class="headercontent">
+                    <h1 id="name">Charlotte Goodwin</h1>
+                    <nav>
+                        <a id="about" href="index.html">About</a>
+                        <a id="portfolio" href="portfolio.html">Portfolio</a>
+                        <a id="contatct" href="contact.html">Contact</a>
+                    </nav>
+                </div>
+            </header>
+            
+            <article>
+                <h2 id="heading">About Me</h2>
+                <img src="assets/images/profile.jpg" alt="Charlotte Goodwin">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quos eius veniam voluptates itaque nulla eligendi beatae. Ab quis porro ad? Exercitationem adipisci odio mollitia provident magnam velit debitis eius.</p>
+            </article>
+        </div>
+        <footer class="footer">Copyright ©</footer>
     </body> 
 </html>
