--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <title>About Me</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="assets/CSS/style.css">
-    </head>
+<head>
+    <title>About Me</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/CSS/style.css">
+</head>
 
-    <body background="assets/images/grilled_@2X.png">
-        <div class="content">
-            <header>
-                <div class="headercontent">
-                    <h1 id="name">Charlotte Goodwin</h1>
-                    <nav>
-                        <a id="about" href="index.html">About</a>
-                        <a id="portfolio" href="portfolio.html">Portfolio</a>
-                        <a id="contatct" href="contact.html">Contact</a>
-                    </nav>
-                </div>
-            </header>
-            
-            <article>
-                <h2 id="heading">About Me</h2>
-                <img src="assets/images/profile.jpg" alt="Charlotte Goodwin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quos eius veniam voluptates itaque nulla eligendi beatae. Ab quis porro ad? Exercitationem adipisci odio mollitia provident magnam velit debitis eius.</p>
-            </article>
-        </div>
-        <footer class="footer">Copyright ©</footer>
-    </body> 
+<body background="assets/images/grilled_@2X.png">
+    <div class="content">
+        <header>
+            <div class="headercontent">
+                <h1 id="name">Charlotte Goodwin</h1>
+                <nav>
+                    <a id="about" href="index.html">About</a>
+                    <a id="portfolio" href="portfolio.html">Portfolio</a>
+                    <a id="contatct" href="contact.html">Contact</a>
+                </nav>
+            </div>
+        </header>
+        
+        <section>
+            <h2 id="heading">About Me</h2>
+            <img src="assets/images/profile.jpg" alt="Charlotte Goodwin">
+            <p>
+                I'm a full stack web development bootcamp student at the University of Central Florida entering the tech field as a second career. With a background in healthcare, most recently working in the Intensive Care Unit as a registered nurse, I understand the role that technology plays in even the smallest and most intricate details of our lives. I am impressed by and drawn to the efficiency and optimization that technology brings, and would like to bring my skills of being a detail oriented, forward thinking individual into this exciting field. 
+            </p>
+            <br>
+            <p>
+                This portfolio site is where I will be showcasing my abilities, and will be updated as I gain new skills and progress throughout my studies. Although not yet sure of where I see myself landing professionally for the first leg of this new journey, I am excited to explore the many options available and consistently seeking opportunities for growth.
+
+            </p>
+        </section>
+    </div>
+    <footer class="footer">Copyright ©</footer>
+</body> 
 </html>
