--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>About Me</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 </head>
 
 <body background="assets/images/grilled_@2X.png">
