--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>About Me</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body background="assets/images/grilled_@2X.png">
