--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <title>Contact Info</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body background="assets/images/grilled_@2X.png">
