Changed message field element to <textarea> for functional purposes

--- a/contact.html
+++ b/contact.html
@@ -22,18 +22,18 @@
         <section>
             <h2 id="heading">Contact</h2>
             <div>
-                <form action="">
+                <form>
                     Name
                     <br><br>
-                    <input class="input" type="text" name="Name" value="John Smith">
+                    <input class="input" type="text" name="Name" placeholder="John Smith">
                     <br><br>
                     Email
                     <br><br>
-                    <input class="input" type="email" name="Email" value="example@gmail.com">
+                    <input class="input" type="email" name="Email" placeholder="example@gmail.com">
                     <br><br>
                     Message
                     <br><br>
-                    <input id="message" class="input" type="text" name="Message" value="">
+                    <textarea id="message" class="input"></textarea>
                     <br><br>
                     <input id="submit" type="submit" value="Submit">
 
